seccion de datos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
 			</ol>
 		</div>
 	</section>
+	<section>
+	<div id="contact-form"> 
+	   <form method="post" action="emailForm.php">  	         
+	      <label for="name">Nombres: <span class="required">*</span></label>  
+	      <input type="text" id="nombre" name="nombre" value="" required="required" />  
+
+		<label for="name">Apellidos: <span class="required">*</span></label>  
+	      <input type="text" id="apellido" name="apellido" value="" required="required" />  
+
+	      <label for="name">Direccion: <span class="required">*</span></label>  
+	      <input type="text" id="direccion" name="direccion" value="" required="required" />  
+
+	         
+	       <label for="name">Fecha Nacimiento: <span class="required">*</span></label>  
+	      <input type="text" id="nacimiento" name="nacimiento" value="" required="required" /> 
+
+	      <label for="name">Celular: <span class="required">*</span></label>  
+	      <input type="text" id="celular" name="celular" value="" required="required" />   
+	         
+   		</form>  
+	</div>
 
 	
 	<section class="botones">
