--- a/login.html
+++ b/login.html
@@ -8,10 +8,10 @@
 	<body>
  		<form action="menu.php">
 			Usuario<br>
-			<input type="text" name="firstname">
+			<input type="text" name="txtUsuario">
 			<br>
 			Clave<br>
-			<input type="text" name="lastname">
+			<input type="text" name="txtClave">
 			<br><br>
 			<input type="submit" value="Ingreso al sistema">
 		</form> 		
