--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<h1>CITE-MATICO</h1>
 			<h2>Cite-matico es un sistema que te permitira realizar las siguientes actividades.</h2>
 			<ol id="datos">
-				<li>Solicitar una cita con el profesor que desee ser atendido/a</li>
+				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
-				<li>Realizar encuestas para ayudar a mejorar la atencion de los maestros.</li>
+				<li>Realizar encuestas para ayudar a mejorar la atención de los maestros.</li>
 			</ol>
 		</div>
 	</section>
@@ -39,7 +39,7 @@
 		<label for="name">Apellidos: <span class="required">*</span></label>  
 	      <input type="text" id="apellido" name="apellido" value="" required="required" />  
 
-	      <label for="name">Direccion: <span class="required">*</span></label>  
+	      <label for="name">Dirección: <span class="required">*</span></label>  
 	      <input type="text" id="direccion" name="direccion" value="" required="required" />  
 
 	         
@@ -60,7 +60,7 @@
 	</section>
 	<footer>
 		<h1 class="foot">CITE-MATICO</h1>
-		<span class="foot">Sistemas de citacion para atencion de padres de familia</span>
+		<span class="foot">Sistema de citas para atención de padres de familia</span>
 		<h2 class="foot">EDCOM-ESPOL</h2>
 	</footer>
 </body>
