--- a/solicitud.html
+++ b/solicitud.html
@@ -24,9 +24,9 @@
 			<h1>CITE-MATICO</h1>
 			<h2>Cite-matico es un sistema que te permitira realizar las siguientes actividades.</h2>
 			<ol id="datos">
-				<li>Solicitar una cita con el profesor que desee ser atendido/a</li>
+				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
-				<li>Realizar encuestas para ayudar a mejorar la atencion de los maestros.</li>
+				<li>Realizar encuestas para ayudar a mejorar la atencirón de los maestros.</li>
 			</ol>
 		</div>
 	</section>
@@ -38,7 +38,7 @@
 	      <select name="docente" id="subject">
 	      	<option value="Kevin">Kevin Santacruz</option>
 	      	<option value="Joel">Joel Collahuazo</option>
-	      	<option value="Carlos">Carlos Perez</option>
+	      	<option value="Carlos">Carlos Julio Pérez</option>
 	      	<option value="Cristian">Cristian Brunis</option>
 	      	<option value="Anibal">Anibal Saltos</option>
 	      </select>
@@ -68,7 +68,7 @@
 	</section>
 	<footer>
 		<h1 class="foot">CITE-MATICO</h1>
-		<span class="foot">Sistemas de citacion para atencion de padres de familia</span>
+		<span class="foot">Sistema de citas para atención de padres de familia</span>
 		<h2 class="foot">EDCOM-ESPOL</h2>
 	</footer>
 </body>
