--- a/solicitud.html
+++ b/solicitud.html
@@ -26,7 +26,7 @@
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
-				<li>Realizar encuestas para ayudar a mejorar la atencirón de los maestros.</li>
+				<li>Realizar encuestas para ayudar a mejorar la atención de los maestros.</li>
 			</ol>
 		</div>
 	</section>
