--- a/solicitud.html
+++ b/solicitud.html
@@ -62,8 +62,8 @@
    		</form>  
 	</div>
 	<section class="botones">
-		<a href="#" class="boton">Solicitar Cita</a>
-		<a href="#" class="boton">Actualizar Datos</a>
+		<a href="#" class="boton">Solicitar cita</a>
+		<a href="#" class="boton">Actualizar datos</a>
 	</section>
 	</section>
 	<footer>
