--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 	
 	<section class="botones">
-		<a href="solicitud.html" class="boton">Solicitar Cita</a>
-		<a href="#" class="boton">Actualizar Datos</a>
+		<a href="solicitud.html" class="boton">Solicitar cita</a>
+		<a href="#" class="boton">Actualizar datos</a>
 	</section>
 	</section>
 	<footer>
