--- a/citas.html
+++ b/citas.html
@@ -12,8 +12,8 @@
 		<h1 id="titulo">CITE - MATICO</h1>
 		<nav id="navegacion">
 			<ul>
-				<li id="le" ><a id="activo" href="index.html">INICIO</a></li>
-				<li id="le"><a  href="citas.html">CITAS</a></li>
+				<li id="le" ><a href="index.html">INICIO</a></li>
+				<li id="le"><a id="activo" href="citas.html">CITAS</a></li>
 				<li id="le"><a  href="encuestas.html">ENCUESTAS</a></li>
 			</ul>
 		</nav>
@@ -29,71 +29,32 @@
 			</ol>
 		</div>
 	</section>
-	<section id="horario">
-		<table>
-			<tr>
-				<td>Hora</td>
-				<td>Lunes</td>
-				<td>Martes</td>
-				<td>Miercoles</td>
-				<td>Jueves</td>
-				<td>Viernes</td>
+	<h1 id="citaciones">LISTA DE CITACIONES</h1>
+	<section id="citas">
+		<table class="table">
+			<tr class="tr" id="head">
+				<td class="td">Fecha:</td>
+				<td class="td">Docente:</td>
+				<td class="td">Descripcion:</td>
+				<td class="td">Observaciones:</td>
 			</tr>
-			<tr>
-				<td>08:15 - 09:15</td>
-				<td></td>
-				<td class="disponible"></td>
-				<td></td>
-				<td></td>
-				<td></td>
+			<tr class="tr">
+				<td class="td">20/11/2014</td>
+				<td class="td">Lic. Anibal Saltos J.</td>
+				<td class="td">Académico - conductal</td>
+				<td class="td"><img src=""/></td>
 			</tr>
-			<tr>
-				<td>09:15 - 10:15</td>
-				<td></td>
-				<td class="disponible"></td>
-				<td></td>
-				<td></td>
-				<td></td>
+			<tr class="tr">
+				<td class="td">15/11/2014</td>
+				<td class="td">Lic.Joel Collahuazo</td>
+				<td class="td">Conductal</td>
+				<td class="td"><img src=""/></td>
 			</tr>
-			<tr>
-				<td>10:15 - 11:15</td>
-				<td></td>
-				<td></td>
-				<td class="disponible"></td>
-				<td></td>
-				<td class="disponible"></td>
-			</tr>
-			<tr>
-				<td>11:15 - 12:15</td>
-				<td></td>
-				<td></td>
-				<td class="disponible"></td>
-				<td></td>
-				<td class="disponible"></td>
-			</tr>
-			<tr>
-				<td>13:15 - 14:15</td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>14:15 - 15:15</td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>15:15 - 16:15</td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
+			<tr class="tr">
+				<td>15/11/2014</td>
+				<td>Lic. Kevin Santacruz</td>
+				<td>Novedades Conductales</td>
+				<td><img src=""/></td>
 			</tr>
 		</table>
 	</section>
