modificacion pagina encuesta y correción de logo

--- a/encuestas.html
+++ b/encuestas.html
@@ -8,7 +8,7 @@
 	</head>
 <body>
 		<header>
-		<img id="logo" src="img/logo.jpg" alt="CITE-MATICO"/>
+		<img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
 		<h1 id="titulo">CITE - MATICO</h1>
 		<nav id="navegacion">
 			<ul>
@@ -29,11 +29,11 @@
 		</div>
 	</section>
 	
-	<section>
-		<div>
-
-
-		</div>
+	<section class="encuesta">
+			<time>20-01-2015</time>
+			<em>Encuesta 2015</em>
+			<a href="#" class="enlace">www.encuesta.com</a>
+			<em>Disponible</em>
 	</section>
 	
 	<footer>
