Modificaciones de presentación de datos
tambien se enlazo bien la extension de la imagen logo

--- a/encuestas.html
+++ b/encuestas.html
@@ -29,12 +29,13 @@
 		</div>
 	</section>
 	
-	<section class="encuesta">
+	<section class="encuestas">
+		<article class="encuesta">
 			<time>20-01-2015</time>
 			<em>Encuesta 2015</em>
-			<a href="#" class="enlace">www.encuesta.com</a>
-			<em>Disponible</em>
-	</section>
+			<a href="#" class="link">www.encuesta.com</a>
+			<em class="dispo">DISPONIBLE</em>
+		</article>
 	
 	<footer>
 		<h1 class="foot">CITE-MATICO</h1>
