--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<img id="logo" src="img/logo.jpg" alt="CITE-MATICO"/>
+		<img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
 		<h1 id="titulo">CITE - MATICO</h1>
 		<nav id="navegacion">
 			<ul>
@@ -21,7 +21,7 @@
 	<section>
 		<div id="cite">
 			<h1>CITE-MATICO</h1>
-			<h2>Cite-matico es un sistema que te permitira realizar las siguientes actividades.</h2>
+			<h2>Cite-matico es un sistema que te permitirá realizar las siguientes actividades.</h2>
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
