--- a/horario.html
+++ b/horario.html
@@ -8,7 +8,7 @@
 	</head>
 <body>
 		<header>
-		<img id="logo" src="img/logo.jpg" alt="CITE-MATICO"/>
+		<img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
 		<h1 id="titulo">CITE - MATICO</h1>
 		<nav id="navegacion">
 			<ul>
