--- a/solicitud.html
+++ b/solicitud.html
@@ -22,7 +22,7 @@
 	<section>
 		<div id="cite">
 			<h1>CITE-MATICO</h1>
-			<h2>Cite-matico es un sistema que te permitirá realizar las siguientes actividades.</h2>
+			<h2>CITE-MATICO es un sistema que te permitirá realizar las siguientes actividades.</h2>
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
@@ -63,7 +63,7 @@
    		</form>  
 	</div>
 	<section class="botones">
-		<a href="horario.html" class="boton">Ver Horario</a>
+		<a href="horario.html" class="boton">Ver horario</a>
 	</section>
 	</section>
 	<footer>
