--- a/horario.html
+++ b/horario.html
@@ -21,7 +21,7 @@
 	<section>
 		<div id="cite">
 			<h1>CITE-MATICO</h1>
-			<h2>Cite-matico es un sistema que te permitira realizar las siguientes actividades.</h2>
+			<h2>CITE-MATICO es un sistema que te permitirá realizar las siguientes actividades.</h2>
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
@@ -35,7 +35,7 @@
 				<td>Hora</td>
 				<td>Lunes</td>
 				<td>Martes</td>
-				<td>Miercoles</td>
+				<td>Miércoles</td>
 				<td>Jueves</td>
 				<td>Viernes</td>
 			</tr>
