--- a/citas.html
+++ b/citas.html
@@ -21,7 +21,7 @@
 	<section>
 		<div id="cite">
 			<h1>CITE-MATICO</h1>
-			<h2>Cite-matico es un sistema que te permitira realizar las siguientes actividades.</h2>
+			<h2>CITE-MATICO es un sistema que te permitirá realizar las siguientes actividades.</h2>
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
@@ -35,7 +35,7 @@
 			<tr class="tr" id="head">
 				<td class="td">Fecha:</td>
 				<td class="td">Docente:</td>
-				<td class="td">Descripcion:</td>
+				<td class="td">Descripción:</td>
 				<td class="td">Observaciones:</td>
 			</tr>
 			<tr class="tr">
@@ -46,14 +46,14 @@
 			</tr>
 			<tr class="tr">
 				<td class="td">15/11/2014</td>
-				<td class="td">Lic.Joel Collahuazo</td>
+				<td class="td">Lic. Joel Collahuazo</td>
 				<td class="td">Conductal</td>
 				<td class="td"><img src=""/></td>
 			</tr>
 			<tr class="tr">
 				<td>15/11/2014</td>
 				<td>Lic. Kevin Santacruz</td>
-				<td>Novedades Conductales</td>
+				<td>Novedades conductales</td>
 				<td><img src=""/></td>
 			</tr>
 		</table>
