--- a/encuestas.html
+++ b/encuestas.html
@@ -20,11 +20,11 @@
 	</header>
 	<section>
 		<div id="cite">
-			<h2>Para controlar y evaluar la calidad de nuestro servicio con los docentes hacia usted, complete las encuestas presentadas disponibles.</h2>
+			<h2>Para mejorar constantemente nuestro servicio, por favor complete las encuestas presentadas a continuación.</h2>
 			<ol id="datos">
-				<li>Todos los campos oligatoriamente deben estar completos</li>
+				<li>Todos los campos oligatoriamente deben estar completos.</li>
 				<li>La información proporcionada por usted debe ser verídica.</li>
-				<li>Una vez finalizada la encuesta, dar click sobre el boton enviar.</li>
+				<li>Una vez finalizada la encuesta, haga clic sobre el botón enviar.</li>
 			</ol>
 		</div>
 	</section>
