--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<section>
 		<div id="cite">
 			<h1>CITE-MATICO</h1>
-			<h2>Cite-matico es un sistema que te permitirá realizar las siguientes actividades.</h2>
+			<h2>CITE-MATICO es un sistema que te permitirá realizar las siguientes actividades.</h2>
 			<ol id="datos">
 				<li>Solicitar una cita con el profesor que desee ser atendido/a.</li>
 				<li>Observar las citaciones realizadas y futuras con su respectivas observaciones y recomendaciones.</li>
