--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 	<title>Cite-Matico Inicio</title>
 </head>
-<body class ="Container">
+<body class="container">
 	<header class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
 		<h1 id="titulo">CITE - MATICO</h1>
