--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<nav id="navegacion">
 			<ul>
 				<li id="le" ><a id="activo" href="index.html">INICIO</a></li>
+                <li id="le"><a  href="login.html">LOGIN</a></li>
 				<li id="le"><a  href="citas.html">CITAS</a></li>
 				<li id="le"><a  href="encuestas.html">ENCUESTAS</a></li>
 			</ul>
