--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		<nav id="navegacion">
 			<ul>
 				<li id="le" ><a id="activo" href="index.html">INICIO</a></li>
-                <li id="le"><a  href="login.html">LOGIN</a></li>
-				<li id="le"><a  href="citas.html">CITAS</a></li>
-				<li id="le"><a  href="encuestas.html">ENCUESTAS</a></li>
+                <li id="le"><a  href="pages/login.html">LOGIN</a></li>
+				<li id="le"><a  href="pages/citas.html">CITAS</a></li>
+				<li id="le"><a  href="pages/encuestas.html">ENCUESTAS</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -107,8 +107,8 @@
 
 	
 	<section class="botones">
-		<a href="solicitud.html" class="boton">Solicitar cita</a>
-		<a href="actualizar.html" class="boton">Actualizar datos</a>
+		<a href="pages/solicitud.html" class="boton">Solicitar cita</a>
+		<a href="pages/actualizar.html" class="boton">Actualizar datos</a>
 	</section>
 	</section>
 	<footer class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
