--- a/pages/encuestas.html
+++ b/pages/encuestas.html
@@ -3,18 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-		<link rel="stylesheet" href="css/bootstrap.css">
-	    <link rel="stylesheet" href="css/estilo.css"/>
+		<link rel="stylesheet" href="../css/bootstrap.css">
+	    <link rel="stylesheet" href="../css/estilo.css"/>
+        <link rel="shortcut icon" type="image/x-icon" href="../img/icono.jpg" />
 	    <title>Cite-Matico Horario</title>
 	</head>
 <body>
 		<header>
-		<img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
+		<img id="logo" src="../img/logo.png" alt="CITE-MATICO"/>
 		<h1 id="titulo">CITE - MATICO</h1>
 		<nav id="navegacion">
 			<ul>
-				<li id="le" ><a href="index.html">INICIO</a></li>
-				<li id="le"><a  href="citas.html">CITAS</a></li>
+				<li id="le" ><a href="../index.html">INICIO</a></li>
+				<li id="le"><a  href="../pages/citas.html">CITAS</a></li>
 				<li id="le"><a id="activo" href="#">ENCUESTAS</a></li>
 			</ul>
 		</nav>
