--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,10 @@
 	<head>
 	        <meta charset="UTF-8">
 	        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-	        <link rel="stylesheet" href="css/bootstrap.css">
-	        <link rel="stylesheet" href="css/estilo.css"/>
+            <link rel="shortcut icon" type="image/x-icon" href="../img/icono.jpg" />
+
+	        <link rel="stylesheet" href="../css/bootstrap.css">
+	        <link rel="stylesheet" href="../css/estilo.css"/>
 	        <title>Ingreso al sistema</title>
 
 		<script>
@@ -16,7 +18,7 @@
 	</head>
 	<body>
 		<header>
-	        <img id="logo" src="img/logo.png" alt="CITE-MATICO"/>
+	        <img id="logo" src="../img/logo.png" alt="CITE-MATICO"/>
 			<h1 id="titulo">CITE - MATICO</h1>
 		</header>
 		<section>
@@ -34,7 +36,7 @@
 				</form>
 			</div>
   			<section class="botones">
-		            <a href="index.html" class="boton" onclick="mensaje();" >Ingresar</a>
+		            <a href="../index.html" class="boton" onclick="mensaje();" >Ingresar</a>
 			</section>
 
 		</section>
