--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	
 	<section class="botones">
 		<a href="pages/solicitud.html" class="boton">Solicitar cita</a>
-		<a href="*" class="boton">Actualizar datos</a>
+		<a class="boton">Actualizar datos</a>
 	</section>
 	</section>
 	<footer class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
