--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
 		<h1 class="foot">CITE-MATICO</h1>
 		<span class="foot">Sistema de citas para atención de padres de familia</span>
 		<h2 class="foot">EDCOM-ESPOL</h2>
+		
+		<p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="¡CSS Válido!" />
+    </a>
+</p>
+
+		<p>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="¡CSS Válido!" />
+</a>
+</p>
+		
 	</footer>
 </body>
 </html>
