archivos de la rama master

--- a/pages/citas.html
+++ b/pages/citas.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-	<? Php  include_once ( " metadatos.php "); ?>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+		<link rel="stylesheet" href="../css/bootstrap.css">
+	    <link rel="stylesheet" href="../css/estilo.css"/>
+        <link rel="shortcut icon" type="image/x-icon" href="../img/icono.jpg" />
+
+	    <title>Cite-Matico Horario</title>
+	</head>
 <body>
 		<header>
 		<img id="logo" src="../img/logo.png" alt="CITE-MATICO"/>
