--- a/pages/login.html
+++ b/pages/login.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-	
-	<? Php  include_once ( " metadatos.php "); ?>
-
 	<head>
+	        <meta charset="UTF-8">
+	        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+            <link rel="shortcut icon" type="image/x-icon" href="../img/icono.jpg" />
+
+	        <link rel="stylesheet" href="../css/bootstrap.css">
+	        <link rel="stylesheet" href="../css/estilo.css"/>
+	        <title>Ingreso al sistema</title>
+
 		<script>
 			function mensaje() {
 				//document.getElementById("demo").innerHTML = "Paragraph changed.";
